--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
 <header>
     <section class="intro">
+        <h1> hello</h1>
         <h2><em>Connecting Talents, Bridging Success</em></h2>
         <h3>Your dream job could be one click away—</h3>
         <a href="job-listing.html" class="apply-button">Apply Now</a>
