--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="navbarfooter.css">
 </head>
-<body>
+<body>-
 
 <!-- Navigation -->
 <div id="navbar"></div>
 
 <header>
     <section class="intro">
-        <h1> hello</h1>
         <h2><em>Connecting Talents, Bridging Success</em></h2>
         <h3>Your dream job could be one click away—</h3>
         <a href="job-listing.html" class="apply-button">Apply Now</a>
