--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,13 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="navbarfooter.css">
 </head>
-<body>-
+<body>-                                
 
 <!-- Navigation -->
 <div id="navbar"></div>
 
 <header>
-<<<<<<< HEAD
     <section class="intro">
-=======
-<section class="intro">
-        <h1> hello</h1>
->>>>>>> 0842c7d7a1dea7f45e45825fd6bcc868bae51e71
         <h2><em>Connecting Talents, Bridging Success</em></h2>
         <h3>Your dream job could be one click away—</h3>
         <a href="job-listing.html" class="apply-button">Apply Now</a>
@@ -43,7 +38,7 @@
     <div class="spacer"></div>
     <div class="columns">
         <div class="column left-column">
-            <img src="img/ss.png" alt="facebook">
+            <img src="img\ss.png" alt="facebook">
         </div>
         <div class="column right-column">
             <h2>Follow Us on Facebook</h2>
