--- a/managejobs.html
+++ b/managejobs.html
@@ -56,7 +56,6 @@
             <span id="page-number">Page 1 of 1</span>
             <button id="next-btn" onclick="nextPage()">Next</button>
         </div>
-       
     </div>
 
     <div id="footer"></div>
@@ -65,3 +64,4 @@
     <script type="module" src="managejobs.js"></script>
 </body>
 
+</html>
