--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="navbarfooter.css">
 </head>
-<body>-                                
+<body>                               
 
 <!-- Navigation -->
 <div id="navbar"></div>
