--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+
+
 <footer class="footer-container">
     <div class="footer-content">
         <!-- Company Info Section -->
@@ -30,9 +35,19 @@
         <!-- Social Links Section -->
         <div class="footer-column social">
             <h3>Social</h3>
-            <p><a href="#">Facebook</a></p>
+            <div style="display: flex; align-items: left; justify-content: left; gap: 5px;">
+                <!-- Facebook Logo -->
+                <a href="https://www.facebook.com/profile.php?id=61568564760346" target="_blank">
+                    <img src="img\fb.png" alt="facebook" style="width: 26px; height: auto;">
+                </a>
+        
+                <!-- Indeed Logo -->
+                <a href="https://ph.indeed.com/cmp/Edrianco-Manpower-Services-1?from=mobviewjob&tk=1idgs69g1gepr804&fromjk=088f50481ae29025&attributionid=mobvjcmp" target="_blank">
+                    <img src="img\Indeed.png" alt="Indeed" style="width: 36px; height: 20px;">
+                </a>
+            </div>
         </div>
-    </div>
+        
 
     <!-- Footer Credits -->
     <div class="footer-credits">
