oks na bootstrap

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     <p class="lead fw-normal text-white-50 mb-4">At EdrianCo Manpower Services, we believe in empowering businesses with exceptional talent while creating meaningful opportunities for skilled professionals. Together, we build strong connections that drive success and growth for both companies and individuals.</p>
                 </p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                        <a class="btn btn-outline-light btn-lg px-4" href="#!">Apply Now</a>
+                        <a class="btn btn-outline-light btn-lg px-4" href="job-listing.html">Apply Now</a>
                     </div>
                 </div>
             </div>
@@ -41,22 +40,6 @@
     </div>
 </header>
 
-
-
-<!-- <section class="py-5" id="features">
-    <div class="container px-5 my-5">
-        <div class="row gx-5">
-            <div class="col-lg-4 mb-5 mb-lg-0">
-                <h2 class="fw-bolder mb-0">Explore Job Opportunities</h2>
-            </div>
-            <div class="col-lg-8">
-                <div class="row gx-5 row-cols-1 row-cols-md-2" id="jobsList">
-                </div>
-                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">View all jobs</a>
-            </div>
-        </div>
-    </div>
-</section> -->
 
 <section class="py-5">
     <div class="container px-5 my-5">
@@ -76,7 +59,7 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">View all jobs</a>
+            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="job-listing.html">View all jobs</a>
         </div>
 
     </div>
@@ -93,12 +76,12 @@
             <h2>Follow Us on Facebook</h2>
             <p>Stay updated with job openings and news on our Facebook page.</p>
             <p>Click below to like our page and join our community!</p>
-            <a href="https://www.facebook.com/profile.php?id=61568564760346" target="_blank" class="button">Visit our Facebook Page</a>
+            <a href="https://www.facebook.com/profile.php?id=61568564760346" target="_blank" class="btn btn-primary btn-lg px-4 me-sm-3">Visit our Facebook Page</a>
         </div>
     </div>
     <div class="spacer"></div>
 </div>
-
+</main>
 <!-- Footer -->
 <div id="footer"></div>
 
