--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
                         <li><a class="dropdown-item" href="blog-post.html">Message from the General Manager</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="about.html">Job Listing</a></li>
+                <li class="nav-item"><a class="nav-link" href="job-listing.html">Job Listing</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="pricing.html">Contact Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="faq.html">Our Process</a></li>
